# hydra-client

./: .gitignore  .travis.yml  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: check.yml
src/hydra_client/: __init__.py  abc.py  api.py  client.py  common.py  consent.py  exceptions.py  login.py  logout.py  model.py  oauth2.py  utils.py  version.py
tests/: conftest.py  test_consent.py  test_hydra.py  test_login.py  test_logout.py  test_oauth2.py  test_version.py
tests/cassettes/: test_consent.test_consent_request_accept.json  test_consent.test_consent_request_create.json  test_consent.test_consent_request_reject.json  test_consent.test_list_consent_sessions.json  test_consent.test_revoke_consent_sessions.json  test_login.test_invalidate_login_sessions.json  test_login.test_login_request_accept.json  test_login.test_login_request_create.json  test_login.test_login_request_reject.json  test_logout.test_logout_request_accept.json  test_logout.test_logout_request_create.json  test_logout.test_logout_request_reject.json  test_oauth2.test_client_create.json  test_oauth2.test_client_delete.json  test_oauth2.test_client_get.json  test_oauth2.test_client_list.json  test_oauth2.test_client_update.json  test_version.test_hydra_version.json
