[tool.poetry]
name = "hydra-client"
version = "0.1.0"
description = "Client library for ORY Hydra (OAuth2 and OpenID Connect provider)"
authors = ["Simon Westphahl <westphahl@gmail.com>"]
license = "MIT"
homepage = "https://github.com/westphahl/hydra-client"
packages = [
    { include = "hydra", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
