[tool.poetry]
name = "hydra-client"
version = "0.4.0"
description = "Client library for ORY Hydra (OAuth2 and OpenID Connect provider)"
authors = ["Simon Westphahl <westphahl@gmail.com>"]
license = "MIT"
homepage = "https://github.com/westphahl/hydra-client"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
requests-oauthlib = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.650.0"
betamax = "^0.8.1"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[tool.black]
line-length = 88
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
